Fixed whitespacing, CSS issues, and component calls in Armory

--- a/src/Main.css
+++ b/src/Main.css
@@ -231,8 +231,6 @@ body {
     border-color: #04CCFF;
     background-color: #04CCFF;
     color: #000921;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .tankComponentMenu {
